--- a/src/Editor/styles.css
+++ b/src/Editor/styles.css
@@ -6,7 +6,7 @@
 .rdw-editor-toolbar {
   padding: 6px 5px 0;
   border-radius: 2px;
-  border: 1px solid red;
+  border: 1px solid #F1F1F1;
   display: flex;
   justify-content: flex-start;
   background: white;
